--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -11,9 +11,6 @@
         scrollbar-gutter: stable;
     }
 
-    /* .dark > body {
-    --brand-accent: #a16207;
-  } */
     :root {
         accent-color: var(--brand-accent);
     }
@@ -110,7 +107,7 @@ h6 a {
 body {
     /* --scrollbar-primary-color: #3730a3; */
     --scrollbar-primary-color: var(--brand-accent);
-    --text-color: #e3d517;
+    --text-color: #facc15;
 }
 
 /* .dark body {
@@ -124,6 +121,6 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-thumb {
-    background: linear-gradient(var(--scrollbar-primary-color), var(--text-color));
+    background: linear-gradient(#facc15, #fb923c);
     border-radius: 4px;
 }
